--- a/MouseToVJoy/MouseToVJoy.vcxproj.filters
+++ b/MouseToVJoy/MouseToVJoy.vcxproj.filters
@@ -19,6 +19,9 @@
     <ClInclude Include="mousetovjoy.h">
       <Filter>Headers</Filter>
     </ClInclude>
+    <ClInclude Include="Stopwatch.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Headers">
